--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="https://kit.fontawesome.com/84f723a034.js" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>9章演習</title>
+  <title>課題1</title>
 </head>
 <body>
   <main class="clearfix">
